Fixed scrollbars
git-svn-id: https://svn.participatoryculture.org/svn/dtv/trunk@3195 bce20531-a64c-4166-8316-56baf4a01729

Original sha1: f91e82f568d1a0302f8896bb48a0bf332d7eefc7

--- a/tv/resources/css/main.css
+++ b/tv/resources/css/main.css
@@ -204,7 +204,12 @@ div.scraping-content {
 }
 
 #main-container {
-    padding-top: 76px;
+    position: absolute;
+    padding-top: 0px;
+    top: 76px;
+    bottom: 0px;
+    width: 100%;
+    overflow: auto;
 }
 
 .main-channelbar {
